src/objects/ApplicationFactory_Service__mdt.object
<CustomObject>
    <description>Correlates a SObject with the related service implementation class.</description>
    <fields>
        <fullName>SObjectType__c</fullName>
        <description>Specifies the service&apos;s related SObject Type.</description>
        <inlineHelpText>Specifies the service&apos;s related SObject Type.</inlineHelpText>
        <label>SObject Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ServiceImplementationClass__c</fullName>
        <description>The Apex class to be instantiated.</description>
        <inlineHelpText>The Apex class to be instantiated.</inlineHelpText>
        <label>Service Implementation Class</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Implementation_Key__c</fullName>
        <description>The field value for a Service Implementation SObject implementation field. This value is used to map to the service implementation (SObjectType__c) interface.</description>
        <inlineHelpText>The field value for a Service Implementation SObject implementation field. This value is used to map to the service implementation (SObjectType__c) interface.</inlineHelpText>
        <label>Service Implementation Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Implementation_SObject__c</fullName>
        <description>Maps Application Factory Service to Service Implementation SObject, which is used to get the implementation field for service implementations.</description>
        <inlineHelpText>Maps Application Factory Service to Service Implementation SObject, which is used to get the implementation field for service implementations.</inlineHelpText>
        <label>Service Implementation SObject</label>
        <referenceTo>Service_Implementation_SObject__mdt</referenceTo>
        <relationshipLabel>Application Factory - Services</relationshipLabel>
        <relationshipName>Application_Factory_Services</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Application Factory - Service</label>
    <pluralLabel>Application Factory - Services</pluralLabel>
</CustomObject>